# shaft-engine

./: .gitmodules  CMakeLists.txt  README.md  fetchImGui.sh
SHAFT/Headers/: common.h  shaft-engine.h
SHAFT/Headers/editor/: debug.h  mapedit.h  texedit.h
SHAFT/Headers/game/: game.h  map.h  phys.h
SHAFT/Headers/input/: handler.h
SHAFT/Headers/logic/: boil.h  game.h  math.h  scripts.h
SHAFT/Headers/render/: render.h  rescm.h  shader.h  texfuncs.h
SHAFT/Headers/textures/: manager.h  rescm.h
SHAFT/ImGui/Sources/: imgui_impl_sdl.cpp
SHAFT/Sources/: main.cpp  shaft-engine.cpp
SHAFT/Sources/editor/: debug.cpp  mapedit.cpp  texedit.cpp
SHAFT/Sources/game/: game.cpp  map.cpp  phys.cpp
SHAFT/Sources/input/: handler.cpp
SHAFT/Sources/logic/: game.cpp  math.cpp  scripts.cpp
SHAFT/Sources/render/: drawer.cpp  render.cpp  rescm.cpp  shader.cpp  texfuncs.cpp
SHAFT/Sources/textures/: manager.cpp  rescm.cpp
SHAFT/resources/rsc/: test.lua  testTEXDB.tdb
SHAFT/resources/rsc/shaders/: fb.frag  fb.vert  rawcol.frag  texc.frag
